[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
rocket = "0.5.1"
rocket_oauth2 = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

oauth2 = "4.4.2"


